objects/Veda_Fraud_Phone_Listing_Result__c.object
<CustomObject>
    <fields>
        <fullName>Family_Name_Indicator__c</fullName>
        <label>Family Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Indicator__c</fullName>
        <label>Initial Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Indicator__c</fullName>
        <label>Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Listing_Result_Match_Summary__c</fullName>
        <label>Phone Listing Result Match Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Listing_Result_Type__c</fullName>
        <label>Phone Listing Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veri_Check_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veri Check Report</label>
        <referenceTo>Veda_Fraud_Veri_Check_Report__c</referenceTo>
        <relationshipName>Phone_Listing_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Fraud Phone Listing Result</label>
    <nameField>
        <label>Phone Listing Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Phone Listing Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>